Switched URI-opening from Desktop.browse() to HostServices.showDocument(), plus additional fixes for Linux.